@@ -1,0 +1,16 @@
+
+#Alias /ledger-smb /some/path/to/ledger-smb/
+
+<Directory ${MY_HTDOCSDIR}>
+  AllowOverride All
+  AddHandler cgi-script .pl
+  Options ExecCGI Includes FollowSymlinks
+  Order Allow,Deny
+  Allow from All
+</Directory>
+
+#<Directory /some/path/to/ledger-smb/users>
+#  Order Deny,Allow
+#  Deny from All
+#</Directory>
+  
